# rpi3-rust-template

./: .gitignore  Cargo.toml  Makefile  README.md
ext/: crt0.S  layout.ld
src/: kmain.rs  lib.rs
